fixed mobile spacing issues with logos and counter

--- a/theme-custom.css
+++ b/theme-custom.css
@@ -1,2 +1,7 @@
 @import url("styles/themes/theme-lucy.min.css");
 .factory-flag{ visibility: hidden; }
+
+img{
+    max-width: 100%;
+    height: auto;
+}
